--- a/midterm project report.Rmd
+++ b/midterm project report.Rmd
@@ -31,7 +31,6 @@ Data <- read.csv("Data.csv", header = TRUE)
 # Fix weird value: delete -2, -4 columns
 Data <- Data[, 1:332]
 Data <- Data[, -c(1,2,3,4,46,59,61,129:145,248:281,286,313,315:317,320,322,325,326,330,331)]
-Data <- na.omit(Data)
 ```  
   
    
@@ -68,6 +67,7 @@ In order to explore Hong Kong people’s values and belief and find out potentia
 ## Satisfaction with life  
 
 ### Satisfaction.with.your.life  
+For Figure 1, 10 means completely satisfied while 1 means completely not satisfied. It shows people are overall satisfied with their life.  
 ```{r}
 # make factors
 Data$V23..Satisfaction.with.your.life <- as.factor(Data$V23..Satisfaction.with.your.life)
@@ -89,10 +89,11 @@ ggplot(Data, mapping = aes(x = V23..Satisfaction.with.your.life, y = V242..Age, 
   ggtitle("Age and Satisfaction level")+ labs(caption = "Figure 2")
 
 ```
-For Figure 1, 10 means completely satisfied while 1 means completely not satisfied. It shows people are overall satisfied with their life.
+
   
   
-### Feeling.of.happiness
+### Feeling.of.happiness  
+Figure 3 shows  most people are fairly happy.  
 ```{r}  
 # make factors
 Data$V10..Feeling.of.happiness <- as.factor(Data$V10..Feeling.of.happiness)
@@ -114,10 +115,10 @@ ggplot(Data, mapping = aes(x = V10..Feeling.of.happiness, y = V242..Age, fill = 
   ggtitle("Age and Feeling of Happiness")+ labs(caption = "Figure 4")
 
 ```
-Figure 3 shows  most people are fairly happy.
   
   
-### How.much.freedom.of.choice.and.control.over.own.life
+### How.much.freedom.of.choice.and.control.over.own.life  
+For Figure 5, 10 means much freedom to choose while 1 means completely no freedom to choose. It shows people are overall satisfied freedom.  
 ```{r}  
 # make factors
 Data$V55..How.much.freedom.of.choice.and.control.over.own.life <- as.factor(Data$V55..How.much.freedom.of.choice.and.control.over.own.life)
@@ -139,11 +140,12 @@ ggplot(Data, mapping = aes(x = V55..How.much.freedom.of.choice.and.control.over.
   ggtitle("Age and Freedom to Choos")+ labs(caption = "Figure 6")  
 
 ```
-For Figure 5, 10 means much freedom to choose while 1 means completely no freedom to choose. It shows people are overall satisfied freedom.
+
   
 ## Financial situation  
   
-### Scale.of.incomes
+### Scale.of.incomes  
+Figure 7 is in normal distribution form and it is reasonable. Figure 9 is Mosaic Plots for Satisfaction with life and Incomes. It shows people with low income are strongly disatisfied with their life.  
 ```{r}
 # make factors
 Data$V239..Scale.of.incomes <- as.factor(Data$V239..Scale.of.incomes)
@@ -169,7 +171,6 @@ ggplot(Data) +
    geom_mosaic(aes(x = product(V239..Scale.of.incomes, V23..Satisfaction.with.your.life), fill=V239..Scale.of.incomes), na.rm=TRUE) + 
    labs(x = "Income", y = "Satisfaction level", title='Satisfaction with life and Incomes')+ labs(caption = "Figure 9")
 ```
-Figure 5 is in normal distribution form and it is reasonable. Figure 9 is Mosaic Plots for Satisfaction with life and Incomes. It shows people with low income are strongly disatisfied with their life.
   
 ### Satisfaction.with.financial.situation.of.household
 ```{r}
@@ -217,7 +218,8 @@ ggplot(Data, mapping = aes(x = V235..Are.you.the.chief.wage.earner.in.your.house
 
 ```
   
-### Is.the.chief.wage.earner.employed.now.or.not
+### Is.the.chief.wage.earner.employed.now.or.not  
+It is suprisingly that Figure 15 shows older people have higher unemplotment rate.  
 ```{r}
 # make factors
 Data$V236..Is.the.chief.wage.earner.employed.now.or.not <- as.factor(Data$V236..Is.the.chief.wage.earner.employed.now.or.not)
@@ -238,10 +240,11 @@ ggplot(Data, mapping = aes(x = V236..Is.the.chief.wage.earner.employed.now.or.no
   theme_minimal()+labs(x = "Chief Wage Earner Employment", y = "Age") + 
   ggtitle("Age and Chief Wage Earner Employment")+ labs(caption = "Figure 15")  
 
-```
-It is suprisingly that Figure 15 shows older people have higher unemplotment rate.
+```  
+  
 
-### Family.savings.during.past.year
+### Family.savings.during.past.year  
+These plots show that Hong Kong people are overall in good financial situation.  
 ```{r}
 # make factors
 Data$V237..Family.savings.during.past.year <- as.factor(Data$V237..Family.savings.during.past.year)
@@ -265,11 +268,11 @@ ggplot(Data, mapping = aes(x = V237..Family.savings.during.past.year, y = V242..
   theme(axis.text.x = element_text(angle = 45, hjust = 1, size=8))
 
 ```
-These plots show that Hong Kong people are overall in good financial situation.
   
 ## Identity  
   
-### How.proud.of.nationality
+### How.proud.of.nationality  
+Figure 18 shows people are proud of being a Hong Konger.  
 ```{r}
 # make factors
 Data$V211..How.proud.of.nationality <- as.factor(Data$V211..How.proud.of.nationality)
@@ -293,7 +296,6 @@ ggplot(Data, mapping = aes(x = V211..How.proud.of.nationality, y = V242..Age, fi
   theme(axis.text.x = element_text(angle = 45, hjust = 1, size=8))
 
 ```
-Figure 18 shows people are proud of being a Hong Konger.
 
 ### I see myself as a part of the local community, a Hong Konger
 ```{r}
@@ -320,7 +322,8 @@ ggplot(Data, mapping = aes(x = V213..I.see.myself.as.part.of.my.local.community,
 
 ```
   
-### I see myself as a part of the Chinese nation
+### I see myself as a part of the Chinese nation  
+It is surprisingly that Figure 22 show most people consider themselves as a part of the Chinese nation. And Figure 23 shows that younger people are being less considering themselves as a part of the Chinese nation.  
 ```{r}
 # make factors
 Data$V214..I.see.myself.as.part.of.the..country..nation <- as.factor(Data$V214..I.see.myself.as.part.of.the..country..nation)
@@ -344,11 +347,12 @@ ggplot(Data, mapping = aes(x = V214..I.see.myself.as.part.of.the..country..natio
   theme(axis.text.x = element_text(angle = 45, hjust = 1, size=8))
 
 ```
-It is surprisingly that Figure 22 show most people consider themselves as a part of the Chinese nation. And Figure 23 shows that younger people are being less considering themselves as a part of the Chinese nation.
+
   
 ## Confidence in the government   
   
-### Confidence..The.police
+### Confidence..The.police  
+Figure 25 shows younger people are significantly have less confidence in the police.  
 ```{r}
 # make factors
 Data$V113..Confidence..The.police <- as.factor(Data$V113..Confidence..The.police)
@@ -370,9 +374,9 @@ ggplot(Data, mapping = aes(x = V113..Confidence..The.police, y = V242..Age, fill
   ggtitle("Age and Confidence in the Police")+ labs(caption = "Figure 25") 
 
 ```
-Figure 25 shows younger people are significantly have less confidence in the police.
 
-### Confidence..Hong Kong government
+### Confidence..Hong Kong government  
+Figure 27 shows younger people are significantly have less confidence in Hong Kong government.  
 ```{r}
 # make factors
 Data$V115..Confidence..The.government..in.your.nation.s.capital. <- as.factor(Data$V115..Confidence..The.government..in.your.nation.s.capital.)
@@ -394,9 +398,11 @@ ggplot(Data, mapping = aes(x = V115..Confidence..The.government..in.your.nation.
   ggtitle("Age and Confidence in Hong Kong government")+ labs(caption = "Figure 27") 
 
 ```
-Figure 27 shows younger people are significantly have less confidence in Hong Kong government.
+
   
-### Confidence..Mainland government
+### Confidence..Mainland government  
+Sadly, Figure 28 shows most people have no confidence in Mainland government.
+Figure 29 shows younger people are significantly have less confidence in Mainland government.  
 ```{r}
 # make factors
 Data$V125_17..Confidence..Mainland.government <- as.factor(Data$V125_17..Confidence..Mainland.government)
@@ -418,13 +424,13 @@ ggplot(Data, mapping = aes(x = V125_17..Confidence..Mainland.government, y = V24
   ggtitle("Age and Confidence in Mainland government")+ labs(caption = "Figure 29") 
 
 ```
-Sadly, Figure 28 shows most people have no confidence in Mainland government.
-Figure 29 shows younger people are significantly have less confidence in Mainland government.
+
 
   
 ## Attitude towards democracy  
   
-### Importance.of.democracy
+### Importance.of.democracy  
+For Figure 30, 10 means very important while 1 means not very important. It shows people are overall consider democracy important.  
 ```{r}
 # make factors
 Data$V140..Importance.of.democracy <- as.factor(Data$V140..Importance.of.democracy)
@@ -446,9 +452,9 @@ ggplot(Data, mapping = aes(x = V140..Importance.of.democracy, y = V242..Age, fil
   ggtitle("Age and Importance of Democracyt")+ labs(caption = "Figure 31") 
 
 ```
-For Figure 30, 10 means very important while 1 means not very important. It shows people are overall consider democracy important.
   
-### How.democratically.is.this.country.being.governed.today
+### How.democratically.is.this.country.being.governed.today  
+For Figure 33, 10 means very democratic while 1 means not democratic at all. It shows younger people think the society is more democratic.    
 ```{r}
 # make factors
 Data$V141..How.democratically.is.this.country.being.governed.today <- as.factor(Data$V141..How.democratically.is.this.country.being.governed.today)
@@ -470,4 +476,41 @@ ggplot(Data, mapping = aes(x = V141..How.democratically.is.this.country.being.go
   ggtitle("Age and Today's Democracy Level")+ labs(caption = "Figure 33") 
 
 ```
-For Figure 33, 10 means very democratic while 1 means not democratic at all. It shows younger people think the society is more democratic.  
+
+
+## ggpairs plot between Confidence in Mainland government and other parts 
+```{r include= FALSE}
+new_data <- Data[,c(122,112,110,223,55,249,20)]
+# rename the variables
+names(new_data)[names(new_data)=="V125_17..Confidence..Mainland.government"]="Confidence.in.Mainland.government"
+names(new_data)[names(new_data)=="V115..Confidence..The.government..in.your.nation.s.capital."]="Confidence.in.HongKong.government"
+names(new_data)[names(new_data)=="V113..Confidence..The.police"]="Confidence.in.Police"
+names(new_data)[names(new_data)=="V214..I.see.myself.as.part.of.the..country..nation"]="Part.of.the.Chinese.nation"
+names(new_data)[names(new_data)=="V59..Satisfaction.with.financial.situation.of.household"]="Satisfaction.in.Financial.Situation"
+names(new_data)[names(new_data)=="V239..Scale.of.incomes "]="Incomes.Level"
+names(new_data)[names(new_data)=="V23..Satisfaction.with.your.life"]="Satisfaction.with.Life"
+as.factor(new_data$Confidence.in.Mainland.government)
+as.factor(new_data$Confidence.in.HongKong.government)
+as.factor(new_data$Confidence.in.Police)
+as.factor(new_data$Part.of.the.Chinese.nation)
+as.factor(new_data$Satisfaction.in.Financial.Situation)
+as.factor(new_data$Incomes.Level)
+as.factor(new_data$Satisfaction.with.Life)
+```
+
+```{r}
+# ggpairs plot
+gplot <- GGally::ggpairs(subset(new_data,is.na(new_data$Confidence.in.Mainland.government)==FALSE), mapping = aes(color=Confidence.in.Mainland.government))
+gplot <- gplot + theme(axis.text.x = element_text(angle = 90, hjust = 1, size=8))
+gplot$nrow <- 1
+gplot$yAxisLabels <- gplot$yAxisLabels[1]
+for (j in 1:gplot$ncol){
+    gplot[1, j] <- gplot[1, j] +
+        scale_fill_viridis_d(option = "viridis")
+}
+gplot + ggtitle("ggpairs plots between Confidence in Mainland government and other main variables")
+```
+
+The ggpairs plots show that people who have no confidence in Mainland government have high confidence in Hong KOng government and the police. And they also strongly agree that they are a part of Chinese nation. From this, We can say that Hong Kong protesters may satisfied with Hong Kong government and have the same national identity with people from Mainland China. However, for some reasons, they are disatisfied with Mainland government. Since younger people trend to feel more disatisfied with Mainland government, the reasons may correlate with education.  
+  
+  
